--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.5.2</version>
+		<version>2.3.2.RELEASE</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
@@ -15,10 +15,11 @@
 	<name>09_microservicio_reservas</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
-		<java.version>11</java.version>
-		<!-- /* Servidor Eureka -->
-		<spring-cloud.version>2020.0.3</spring-cloud.version>
-		<!-- Servidor Eureka */ -->
+		<!-- agregado para servidor Eureka -->
+		<spring-cloud.version>Hoxton.SR6</spring-cloud.version>
+		<!--  Quitado para servidor Eureka 
+		<spring-cloud.version>2020.0.3</spring-cloud.version> -->
+		
 	</properties>
 	<dependencies>
 
